# altv-jvm-module

./: .gitignore  .gitlab-ci.yml  .gitmodules  README.md  build.gradle  capi.gradle  jitpack.yml  settings.gradle  wrap-OLD.js  wrap.js
.github/workflows/: ci.yml
cmake/: x64_win32.cmake
java/: build.gradle
java/src/: CAPI.java  Main.java
java/src/alt/v/jvm/: CAPI.java  CAPI.java-t  Main.java
module/: .gitignore  CMakeLists.txt  build-debug.bat  build-win32.sh  build.bat  build.gradle  build.sh
module/src/: Util.hpp  Utils.hpp  VM.cpp  VM.hpp  main.cpp
src/: Utils.hpp  VM.hpp  main.cpp
src/alt/v/jvm/: AltStringView.java  CAPI.java  CAPIExtra.java  LibC.java  Log.java  Main.java  Plugins.java  StringUtil.java
src/hazard7/altv/jvm/: AltStringView.java  CAPI.java  CAPIExtra.java  LibC.java  Log.java  Main.java  Plugins.java  StringUtil.java
